# django_1

./: .env  main.py  pyproject.toml
config/: settings.py
lessons/: models_.txt
product/: admin.py  models.py
product/migrations/: 0001_initial.py
