[tool.poetry]
name = "django_project"
version = "0.1.0"
description = ""
authors = ["ImAgiD <daurbekoaajgerim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.1"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
pillow = "^10.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
